# ccterm

./: .gitignore  Cargo.toml  README.md  ccterm.example.toml
.claude/: settings.json
docs/: 20260129_cli_send_enter.md  20260129_context_cli_adapter.md  20260129_features.md  20260129_hooks_sessions_validation.md  20260129_prompt_wait.md  20260130_app_mention_channel.md  20260130_implementation.md  20260130_readme_permissions.md  20260130_receive_logging.md  20260130_slack_logging.md  20260130_socket_mode_serve.md  20260130_thread_dirs.md  20260130_thread_hook_absolute_path.md  20260204_slack_display_name.md  20260204_stop_reply_delivery.md  20260204_thread_context_claude_md.md  design.md
src/: cli_adapter.rs  config.rs  context.rs  coordinator.rs  hooks.rs  main.rs  sessions.rs  slack_adapter.rs  types.rs
